--- a/legislation/cotonou.html
+++ b/legislation/cotonou.html
@@ -68,7 +68,7 @@
         
     
     <nav class="navigation navbar navbar-default" style="background-color: rgba(255,255,255,0.8);height: 100px">
-        <div class="container" style="">
+        <div class="container">
             <div class="navbar-header">
                 <button type="button" class="open-btn">
                     <span class="sr-only">Toggle navigation</span>
@@ -83,53 +83,53 @@
                 <ul class="nav navbar-nav">
                     <li><a style="color:#16408c" href="../index.html">Accueil</a></li>
 
-                    <li><a style="color:#16408c" href="../contact">Contact</a></li>
+                    <li><a style="color:#16408c" href="../contact.html">Contact</a></li>
 
                     <li class="menu-item-has-children">
                         <a style="color:#16408c" href="cotonou#">La société</a>
                         <ul style="background-color: #16408c" class="sub-menu">
-                            <li><a style="color: white"  href="../about">Qui sommes nous?</a></li>
-                            <li><a style="color: white"  href="../mediatheque">Médiathèque</a></li>
+                            <li><a style="color: white"  href="../about.html">Qui sommes nous?</a></li>
+                            <li><a style="color: white"  href="../mediatheque.html">Médiathèque</a></li>
                         </ul>
                     </li>
 
                     <li class="menu-item-has-children">
                         <a style="color:#16408c" href="cotonou#">Expertises</a>
                         <ul style="background-color: #16408c" class="sub-menu">
-                            <b></b> <li><a style="color: white" href="../droit/contrat">Droit des contrats internationaux</a></li>
-                            <b></b> <li><a style="color: white" href="../droit/ppp">Droit des contrats PPP </a></li>
-                            <b></b> <li><a style="color: white" href="../droit/societe">Droit des sociétés commerciales</a></li>
-                            <b></b> <li><a style="color: white" href="../droit/commerce">Droit commercial général</a></li>
-                            <b></b> <li><a style="color: white" href="../droit/surete">Droit des sûretés</a></li>
-                            <b></b> <li><a style="color: white" href="../droit/creance">Recrouvrement de créances</a></li>
-                            <b></b> <li><a style="color: white" href="../droit/travail">Droit du travail</a></li>
-                            <b></b> <li><a style="color: white" href="../droit/penal">Droit pénal des affaires</a></li>
-                            <b></b> <li><a style="color: white" href="../droit/marche">Droit des marchés publics</a></li>
-                            <b></b> <li><a style="color: white" href="../droit/arbitrage">Arbitrage</a></li>
-                                                    </ul>
+                            <b></b> <li><a style="color: white" href="../droit/contrat.html">Droit des contrats internationaux</a></li>
+                            <b></b> <li><a style="color: white" href="../droit/ppp.html">Droit des contrats PPP </a></li>
+                            <b></b> <li><a style="color: white" href="../droit/societe.html">Droit des sociétés commerciales</a></li>
+                            <b></b> <li><a style="color: white" href="../droit/commerce.html">Droit commercial général</a></li>
+                            <b></b> <li><a style="color: white" href="../droit/surete.html">Droit des sûretés</a></li>
+                            <b></b> <li><a style="color: white" href="../droit/creance.html">Recrouvrement de créances</a></li>
+                            <b></b> <li><a style="color: white" href="../droit/travail.html">Droit du travail</a></li>
+                            <b></b> <li><a style="color: white" href="../droit/penal.html">Droit pénal des affaires</a></li>
+                            <b></b> <li><a style="color: white" href="../droit/marche.html">Droit des marchés publics</a></li>
+                            <b></b> <li><a style="color: white" href="../droit/arbitrage.html">Arbitrage</a></li>
+                        </ul>
                     </li>
                     <li class="menu-item-has-children">
                         <a style="color:#16408c" href="cotonou#">Législation</a>
                         <ul style="background-color: #16408c" class="sub-menu">
-                            <li><a  style="color: white" href="cotonou">Tribunal du commerce de cotonou</a></li>
-                            <li><a  style="color: white" href="ohada">Traité et actes uniformes de l'OHADA</a></li>
-                            <li><a  style="color: white" href="beninoise">Législation béninoise</a></li>
-                                                    </ul>
+                            <li><a  style="color: white" href="cotonou.html">Tribunal du commerce de cotonou</a></li>
+                            <li><a  style="color: white" href="ohada.html">Traité et actes uniformes de l'OHADA</a></li>
+                            <li><a  style="color: white" href="beninoise.html">Législation béninoise</a></li>
+                        </ul>
                     </li>
                     <li class="menu-item-has-children">
                         <a style="color:#16408c" href="cotonou">Jurisprudence</a>
                         <ul style="background-color: #16408c" class="sub-menu">
-                                                            <li><a style="color: white" href="../juris/3">Voies d&#039;exécution</a></li>
-                                                                                </ul>
+                            <li><a style="color: white" href="../juris/voies_d_execution.html">Voies d&#039;exécution</a></li>
+                        </ul>
                     </li>
                     <li class="menu-item-has-children">
                         <a style="color:#16408c" href="cotonou#">Doctrine</a>
                         <ul style="background-color: #16408c" class="sub-menu">
-                                                            <li><a style="color: white" href="../doctrine/1">Voies d&#039;exécution</a></li>
-                                                            <li><a style="color: white" href="../doctrine/2">Mode alternatif de règlement des différends</a></li>
-                                                                                </ul>
+                            <li><a style="color: white" href="../doctrine/voies_d_execution.html">Voies d&#039;exécution</a></li>
+                            <li><a style="color: white" href="../doctrine/voies_d_execution.html">Mode alternatif de règlement des différends</a></li>
+                        </ul>
                     </li>
-                    <li><a style="color:#16408c" href="../blog">Actualités</a></li>
+                    <li><a style="color:#16408c" href="../blog.html">Actualités</a></li>
 
                 </ul>
             </div>
@@ -229,8 +229,8 @@
                             <h3>Liens rapides</h3>
                         </div>
                         <ul>
-                            <li><a href="../about">À propos</a></li>
-                            <li><a href="../contact">Contactez nous</a></li>
+                            <li><a href="../about.html">À propos</a></li>
+                            <li><a href="../contact.html">Contactez nous</a></li>
                             <li><a href="cotonou#">Notre équipe</a></li>
                         </ul>
                     </div>
@@ -241,15 +241,15 @@
                             <h3>Domaines d'expertises</h3>
                         </div>
                         <ul>
-                            <li><a href="../droit/contrat">Droit des contrats internationaux</a></li>
-                            <li><a href="../droit/ppp">Droit des contrats PPP </a></li>
-                            <li><a href="../droit/societe">Droit des sociétés commerciales</a></li>
-                            <li><a href="../droit/commerce">Droit commercial général</a></li>
-                            <li><a href="../droit/surete">Droit des sûretés</a></li>
-                            <li><a href="../droit/travail">Droit du travail</a></li>
-                            <li><a href="../droit/penal">Droit pénal des affaires</a></li>
-                            <li><a href="../droit/marche">Droit des marchés publics</a></li>
-                            <li><a href="../droit/arbitrage">Arbitrage</a></li>
+                            <li><a href="../droit/contrat.html">Droit des contrats internationaux</a></li>
+                            <li><a href="../droit/ppp.html">Droit des contrats PPP </a></li>
+                            <li><a href="../droit/societe.html">Droit des sociétés commerciales</a></li>
+                            <li><a href="../droit/commerce.html">Droit commercial général</a></li>
+                            <li><a href="../droit/surete.html">Droit des sûretés</a></li>
+                            <li><a href="../droit/travail.html">Droit du travail</a></li>
+                            <li><a href="../droit/penal.html">Droit pénal des affaires</a></li>
+                            <li><a href="../droit/marche.html">Droit des marchés publics</a></li>
+                            <li><a href="../droit/arbitrage.html">Arbitrage</a></li>
                         </ul>
                     </div>
                 </div>
