new clear  version

--- a/legislation/beninoise.html
+++ b/legislation/beninoise.html
@@ -68,7 +68,7 @@
         
     
     <nav class="navigation navbar navbar-default" style="background-color: rgba(255,255,255,0.8);height: 100px">
-        <div class="container">
+        <div class="container" style="">
             <div class="navbar-header">
                 <button type="button" class="open-btn">
                     <span class="sr-only">Toggle navigation</span>
@@ -86,7 +86,7 @@
                     <li><a style="color:#16408c" href="../contact.html">Contact</a></li>
 
                     <li class="menu-item-has-children">
-                        <a style="color:#16408c" href="beninoise#">La société</a>
+                        <a style="color:#16408c" href="beninoise.html#">La société</a>
                         <ul style="background-color: #16408c" class="sub-menu">
                             <li><a style="color: white"  href="../about.html">Qui sommes nous?</a></li>
                             <li><a style="color: white"  href="../mediatheque.html">Médiathèque</a></li>
@@ -94,7 +94,7 @@
                     </li>
 
                     <li class="menu-item-has-children">
-                        <a style="color:#16408c" href="beninoise#">Expertises</a>
+                        <a style="color:#16408c" href="beninoise.html#">Expertises</a>
                         <ul style="background-color: #16408c" class="sub-menu">
                             <b></b> <li><a style="color: white" href="../droit/contrat.html">Droit des contrats internationaux</a></li>
                             <b></b> <li><a style="color: white" href="../droit/ppp.html">Droit des contrats PPP </a></li>
@@ -106,28 +106,28 @@
                             <b></b> <li><a style="color: white" href="../droit/penal.html">Droit pénal des affaires</a></li>
                             <b></b> <li><a style="color: white" href="../droit/marche.html">Droit des marchés publics</a></li>
                             <b></b> <li><a style="color: white" href="../droit/arbitrage.html">Arbitrage</a></li>
-                        </ul>
+                                                    </ul>
                     </li>
                     <li class="menu-item-has-children">
-                        <a style="color:#16408c" href="beninoise#">Législation</a>
+                        <a style="color:#16408c" href="beninoise.html#">Législation</a>
                         <ul style="background-color: #16408c" class="sub-menu">
                             <li><a  style="color: white" href="cotonou.html">Tribunal du commerce de cotonou</a></li>
                             <li><a  style="color: white" href="ohada.html">Traité et actes uniformes de l'OHADA</a></li>
                             <li><a  style="color: white" href="beninoise.html">Législation béninoise</a></li>
-                        </ul>
+                                                    </ul>
                     </li>
                     <li class="menu-item-has-children">
-                        <a style="color:#16408c" href="beninoise">Jurisprudence</a>
+                        <a style="color:#16408c" href="beninoise.html">Jurisprudence</a>
                         <ul style="background-color: #16408c" class="sub-menu">
-                            <li><a style="color: white" href="../jurisprudence/voies_d_execution.html">Voies d&#039;exécution</a></li>
-                        </ul>
+                                                            <li><a style="color: white" href="../juris/voie_d_execution.html">Voies d&#039;exécution</a></li>
+                                                                                </ul>
                     </li>
                     <li class="menu-item-has-children">
-                        <a style="color:#16408c" href="beninoise#">Doctrine</a>
+                        <a style="color:#16408c" href="beninoise.html#">Doctrine</a>
                         <ul style="background-color: #16408c" class="sub-menu">
-                            <li><a style="color: white" href="../doctrine/voies_d_execution.html">Voies d&#039;exécution</a></li>
-                            <li><a style="color: white" href="../doctrine/mode_alternatif_reglement_different.html">Mode alternatif de règlement des différends</a></li>
-                        </ul>
+                                                            <li><a style="color: white" href="../doctrine/voies_d_execution.html">Voies d&#039;exécution</a></li>
+                                                            <li><a style="color: white" href="../doctrine/mode_alternatif_reglement_different.html">Mode alternatif de règlement des différends</a></li>
+                                                                                </ul>
                     </li>
                     <li><a style="color:#16408c" href="../blog.html">Actualités</a></li>
 
@@ -169,7 +169,7 @@
                                     <ul>
                                         <li>
                                             <a href="../storage/pdf/Journalofficiel.pdf" target="_blank" class="theme-btn"><i class="fa fa-eye"></i></a>
-                                            beninoise       </li>
+                                        </li>
                                         <li><a href="../download/Journalofficiel.pdf" class="theme-btn"><i class="fa fa-download"></i></a></li>
                                     </ul>
                                 </div>
@@ -361,7 +361,7 @@
                         <ul>
                             <li><a href="../about.html">À propos</a></li>
                             <li><a href="../contact.html">Contactez nous</a></li>
-                            <li><a href="beninoise#">Notre équipe</a></li>
+                            <li><a href="beninoise.html#">Notre équipe</a></li>
                         </ul>
                     </div>
                 </div>
