--- a/legislation/ohada.html
+++ b/legislation/ohada.html
@@ -68,7 +68,7 @@
         
     
     <nav class="navigation navbar navbar-default" style="background-color: rgba(255,255,255,0.8);height: 100px">
-        <div class="container">
+        <div class="container" style="">
             <div class="navbar-header">
                 <button type="button" class="open-btn">
                     <span class="sr-only">Toggle navigation</span>
@@ -86,7 +86,7 @@
                     <li><a style="color:#16408c" href="../contact.html">Contact</a></li>
 
                     <li class="menu-item-has-children">
-                        <a style="color:#16408c" href="ohada#">La société</a>
+                        <a style="color:#16408c" href="ohada.html#">La société</a>
                         <ul style="background-color: #16408c" class="sub-menu">
                             <li><a style="color: white"  href="../about.html">Qui sommes nous?</a></li>
                             <li><a style="color: white"  href="../mediatheque.html">Médiathèque</a></li>
@@ -94,7 +94,7 @@
                     </li>
 
                     <li class="menu-item-has-children">
-                        <a style="color:#16408c" href="ohada#">Expertises</a>
+                        <a style="color:#16408c" href="ohada.html#">Expertises</a>
                         <ul style="background-color: #16408c" class="sub-menu">
                             <b></b> <li><a style="color: white" href="../droit/contrat.html">Droit des contrats internationaux</a></li>
                             <b></b> <li><a style="color: white" href="../droit/ppp.html">Droit des contrats PPP </a></li>
@@ -109,7 +109,7 @@
                         </ul>
                     </li>
                     <li class="menu-item-has-children">
-                        <a style="color:#16408c" href="ohada#">Législation</a>
+                        <a style="color:#16408c" href="ohada.html#">Législation</a>
                         <ul style="background-color: #16408c" class="sub-menu">
                             <li><a  style="color: white" href="cotonou.html">Tribunal du commerce de cotonou</a></li>
                             <li><a  style="color: white" href="ohada.html">Traité et actes uniformes de l'OHADA</a></li>
@@ -117,13 +117,13 @@
                                                     </ul>
                     </li>
                     <li class="menu-item-has-children">
-                        <a style="color:#16408c" href="ohada">Jurisprudence</a>
+                        <a style="color:#16408c" href="ohada.html">Jurisprudence</a>
                         <ul style="background-color: #16408c" class="sub-menu">
-                            <li><a style="color: white" href="../jurisprudence/voies_d_execution.html">Voies d&#039;exécution</a></li>
-                        </ul>
+                                                            <li><a style="color: white" href="../juris/voie_d_execution.html">Voies d&#039;exécution</a></li>
+                                                                                </ul>
                     </li>
                     <li class="menu-item-has-children">
-                        <a style="color:#16408c" href="ohada#">Doctrine</a>
+                        <a style="color:#16408c" href="ohada.html#">Doctrine</a>
                         <ul style="background-color: #16408c" class="sub-menu">
                             <li><a style="color: white" href="../doctrine/voies_d_execution.html">Voies d&#039;exécution</a></li>
                             <li><a style="color: white" href="../doctrine/mode_alternatif_reglement_different.html">Mode alternatif de règlement des différends</a></li>
@@ -165,12 +165,12 @@
                                 </div>
                                 <div class="cart-details">
                                     <ul>
-                                        <li><a href="ohada#" class="theme-btn">Télécharger</a></li>
+                                        <li><a href="ohada.html#" class="theme-btn">Télécharger</a></li>
                                     </ul>
                                 </div>
                             </div>
                             <div class="details">
-                                <h4><a href="ohada#">TRAITÉ DE l'OHADA</a></h4>
+                                <h4><a href="ohada.html#">TRAITÉ DE l'OHADA</a></h4>
                             </div>
                         </div>
                         <div class="col-md-2 grid">
@@ -180,12 +180,12 @@
                                 </div>
                                 <div class="cart-details">
                                     <ul>
-                                        <li><a href="ohada#" class="theme-btn">Télécharger</a></li>
+                                        <li><a href="ohada.html#" class="theme-btn">Télécharger</a></li>
                                     </ul>
                                 </div>
                             </div>
                             <div class="details">
-                                <h4><a href="ohada#">ACTES SUR LES SOCIÉTÉS</a></h4>
+                                <h4><a href="ohada.html#">ACTES SUR LES SOCIÉTÉS</a></h4>
                             </div>
                         </div>
                         <div class="col-md-2 grid">
@@ -195,12 +195,12 @@
                                 </div>
                                 <div class="cart-details">
                                     <ul>
-                                        <li><a href="ohada#" class="theme-btn">Télécharger</a></li>
+                                        <li><a href="ohada.html#" class="theme-btn">Télécharger</a></li>
                                     </ul>
                                 </div>
                             </div>
                             <div class="details">
-                                <h4><a href="ohada#">PROCÉDURES COLLECTIVES</a></h4>
+                                <h4><a href="ohada.html#">PROCÉDURES COLLECTIVES</a></h4>
                             </div>
                         </div>
                         <div class="col-md-2 grid">
@@ -210,12 +210,12 @@
                                 </div>
                                 <div class="cart-details">
                                     <ul>
-                                        <li><a href="ohada#" class="theme-btn">Télécharger</a></li>
+                                        <li><a href="ohada.html#" class="theme-btn">Télécharger</a></li>
                                     </ul>
                                 </div>
                             </div>
                             <div class="details">
-                                <h4><a href="ohada#">L'ARBITRAGE</a></h4>
+                                <h4><a href="ohada.html#">L'ARBITRAGE</a></h4>
                             </div>
                         </div>
                         <div class="col-md-2 grid">
@@ -225,12 +225,12 @@
                                 </div>
                                 <div class="cart-details">
                                     <ul>
-                                        <li><a href="ohada#" class="theme-btn">Télécharger</a></li>
+                                        <li><a href="ohada.html#" class="theme-btn">Télécharger</a></li>
                                     </ul>
                                 </div>
                             </div>
                             <div class="details">
-                                <h4><a href="ohada#">SURETÉS</a></h4>
+                                <h4><a href="ohada.html#">SURETÉS</a></h4>
                             </div>
                         </div>
                         <div class="col-md-2 grid">
@@ -240,12 +240,12 @@
                                 </div>
                                 <div class="cart-details">
                                     <ul>
-                                        <li><a href="ohada#" class="theme-btn">Télécharger</a></li>
+                                        <li><a href="ohada.html#" class="theme-btn">Télécharger</a></li>
                                     </ul>
                                 </div>
                             </div>
                             <div class="details">
-                                <h4><a href="ohada#">SOCIÉTÉS COOPÉRATIVES</a></h4>
+                                <h4><a href="ohada.html#">SOCIÉTÉS COOPÉRATIVES</a></h4>
                             </div>
                         </div>
                         <div class="col-md-2 grid">
@@ -255,12 +255,12 @@
                                 </div>
                                 <div class="cart-details">
                                     <ul>
-                                        <li><a href="ohada#" class="theme-btn">Télécharger</a></li>
+                                        <li><a href="ohada.html#" class="theme-btn">Télécharger</a></li>
                                     </ul>
                                 </div>
                             </div>
                             <div class="details">
-                                <h4><a href="ohada#">RECOUVREMENT</a></h4>
+                                <h4><a href="ohada.html#">RECOUVREMENT</a></h4>
                             </div>
                         </div>
                         <div class="col-md-2 grid">
@@ -270,12 +270,12 @@
                                 </div>
                                 <div class="cart-details">
                                     <ul>
-                                        <li><a href="ohada#" class="theme-btn">Télécharger</a></li>
+                                        <li><a href="ohada.html#" class="theme-btn">Télécharger</a></li>
                                     </ul>
                                 </div>
                             </div>
                             <div class="details">
-                                <h4><a href="ohada#">DROIT COMMERCIAL GÉNÉRAL</a></h4>
+                                <h4><a href="ohada.html#">DROIT COMMERCIAL GÉNÉRAL</a></h4>
                             </div>
                         </div>
                         <div class="col-md-2 grid">
@@ -285,12 +285,12 @@
                                 </div>
                                 <div class="cart-details">
                                     <ul>
-                                        <li><a href="ohada#" class="theme-btn">Télécharger</a></li>
+                                        <li><a href="ohada.html#" class="theme-btn">Télécharger</a></li>
                                     </ul>
                                 </div>
                             </div>
                             <div class="details">
-                                <h4><a href="ohada#">MÉDIATION</a></h4>
+                                <h4><a href="ohada.html#">MÉDIATION</a></h4>
                             </div>
                         </div>
                     </div>
@@ -326,7 +326,7 @@
                         <ul>
                             <li><a href="../about.html">À propos</a></li>
                             <li><a href="../contact.html">Contactez nous</a></li>
-                            <li><a href="ohada#">Notre équipe</a></li>
+                            <li><a href="ohada.html#">Notre équipe</a></li>
                         </ul>
                     </div>
                 </div>
