--- a/mediatheque.html
+++ b/mediatheque.html
@@ -67,7 +67,7 @@
         
     
     <nav class="navigation navbar navbar-default" style="background-color: rgba(255,255,255,0.8);height: 100px">
-        <div class="container">
+        <div class="container" style="">
             <div class="navbar-header">
                 <button type="button" class="open-btn">
                     <span class="sr-only">Toggle navigation</span>
@@ -85,7 +85,7 @@
                     <li><a style="color:#16408c" href="contact.html">Contact</a></li>
 
                     <li class="menu-item-has-children">
-                        <a style="color:#16408c" href="mediatheque#">La société</a>
+                        <a style="color:#16408c" href="mediatheque.html#">La société</a>
                         <ul style="background-color: #16408c" class="sub-menu">
                             <li><a style="color: white"  href="about.html">Qui sommes nous?</a></li>
                             <li><a style="color: white"  href="mediatheque.html">Médiathèque</a></li>
@@ -93,7 +93,7 @@
                     </li>
 
                     <li class="menu-item-has-children">
-                        <a style="color:#16408c" href="mediatheque#">Expertises</a>
+                        <a style="color:#16408c" href="mediatheque.html#">Expertises</a>
                         <ul style="background-color: #16408c" class="sub-menu">
                             <b></b> <li><a style="color: white" href="droit/contrat.html">Droit des contrats internationaux</a></li>
                             <b></b> <li><a style="color: white" href="droit/ppp.html">Droit des contrats PPP </a></li>
@@ -108,7 +108,7 @@
                                                     </ul>
                     </li>
                     <li class="menu-item-has-children">
-                        <a style="color:#16408c" href="mediatheque#">Législation</a>
+                        <a style="color:#16408c" href="mediatheque.html#">Législation</a>
                         <ul style="background-color: #16408c" class="sub-menu">
                             <li><a  style="color: white" href="legislation/cotonou.html">Tribunal du commerce de cotonou</a></li>
                             <li><a  style="color: white" href="legislation/ohada.html">Traité et actes uniformes de l'OHADA</a></li>
@@ -116,13 +116,13 @@
                                                     </ul>
                     </li>
                     <li class="menu-item-has-children">
-                        <a style="color:#16408c" href="mediatheque#">Jurisprudence</a>
+                        <a style="color:#16408c" href="mediatheque.html">Jurisprudence</a>
                         <ul style="background-color: #16408c" class="sub-menu">
-                            <li><a style="color: white" href="jurisprudence/voies_d_execution.html">Voies d&#039;exécution</a></li>
+                            <li><a style="color: white" href="juris/voie_d_execution.html">Voies d&#039;exécution</a></li>
                         </ul>
                     </li>
                     <li class="menu-item-has-children">
-                        <a style="color:#16408c" href="mediatheque#">Doctrine</a>
+                        <a style="color:#16408c" href="mediatheque.html#">Doctrine</a>
                         <ul style="background-color: #16408c" class="sub-menu">
                             <li><a style="color: white" href="doctrine/voies_d_execution.html">Voies d&#039;exécution</a></li>
                             <li><a style="color: white" href="doctrine/mode_alternatif_reglement_different.html">Mode alternatif de règlement des différends</a></li>
@@ -366,7 +366,7 @@
                         <ul>
                             <li><a href="about.html">À propos</a></li>
                             <li><a href="contact.html">Contactez nous</a></li>
-                            <li><a href="mediatheque#">Notre équipe</a></li>
+                            <li><a href="mediatheque.html#">Notre équipe</a></li>
                         </ul>
                     </div>
                 </div>
