--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,7 @@
         
     
     <nav class="navigation navbar navbar-default" style="background-color: rgba(255,255,255,0.8);height: 100px">
-        <div class="container">
+        <div class="container" style="">
             <div class="navbar-header">
                 <button type="button" class="open-btn">
                     <span class="sr-only">Toggle navigation</span>
@@ -85,7 +85,7 @@
                     <li><a style="color:#16408c" href="contact.html">Contact</a></li>
 
                     <li class="menu-item-has-children">
-                        <a style="color:#16408c" href="contact#">La société</a>
+                        <a style="color:#16408c" href="contact.html#">La société</a>
                         <ul style="background-color: #16408c" class="sub-menu">
                             <li><a style="color: white"  href="about.html">Qui sommes nous?</a></li>
                             <li><a style="color: white"  href="mediatheque.html">Médiathèque</a></li>
@@ -93,7 +93,7 @@
                     </li>
 
                     <li class="menu-item-has-children">
-                        <a style="color:#16408c" href="contact#">Expertises</a>
+                        <a style="color:#16408c" href="contact.html#">Expertises</a>
                         <ul style="background-color: #16408c" class="sub-menu">
                             <b></b> <li><a style="color: white" href="droit/contrat.html">Droit des contrats internationaux</a></li>
                             <b></b> <li><a style="color: white" href="droit/ppp.html">Droit des contrats PPP </a></li>
@@ -108,7 +108,7 @@
                                                     </ul>
                     </li>
                     <li class="menu-item-has-children">
-                        <a style="color:#16408c" href="contact#">Législation</a>
+                        <a style="color:#16408c" href="contact.html#">Législation</a>
                         <ul style="background-color: #16408c" class="sub-menu">
                             <li><a  style="color: white" href="legislation/cotonou.html">Tribunal du commerce de cotonou</a></li>
                             <li><a  style="color: white" href="legislation/ohada.html">Traité et actes uniformes de l'OHADA</a></li>
@@ -116,16 +116,16 @@
                                                     </ul>
                     </li>
                     <li class="menu-item-has-children">
-                        <a style="color:#16408c" href="contact#">Jurisprudence</a>
+                        <a style="color:#16408c" href="contact.html">Jurisprudence</a>
                         <ul style="background-color: #16408c" class="sub-menu">
-                            <li><a style="color: white" href="jurisprudence/voies_d_execution.html">Voies d&#039;exécution</a></li>
-                        </ul>
+                                                            <li><a style="color: white" href="juris/voie_d_execution.html">Voies d&#039;exécution</a></li>
+                                                                                </ul>
                     </li>
                     <li class="menu-item-has-children">
-                        <a style="color:#16408c" href="contact#">Doctrine</a>
+                        <a style="color:#16408c" href="contact.html#">Doctrine</a>
                         <ul style="background-color: #16408c" class="sub-menu">
                             <li><a style="color: white" href="doctrine/voies_d_execution.html">Voies d&#039;exécution</a></li>
-                            <li><a style="color: white" href="doctrine/voies_d_execution.html">Mode alternatif de règlement des différends</a></li>
+                            <li><a style="color: white" href="doctrine/mode_alternatif_reglement_different.html">Mode alternatif de règlement des différends</a></li>
                         </ul>
                     </li>
                     <li><a style="color:#16408c" href="blog.html">Actualités</a></li>
@@ -185,7 +185,7 @@
 
                 <div class="contact-form">
                     <form method="post" action="https://gama-avocatsafrique.com/send/rdv">
-                        <input type="hidden" name="_token" value="WMiTPIjwFF6FvShiUYD2CTzLdH0wITo9yYZwRgBr">                        <div>
+                        <input type="hidden" name="_token" value="hq3WeAxkVshr5B95nXSafNNuazs3PygD0E5m7buM">                        <div>
                             <input type="text" class="form-control" name="name" id="name" placeholder="Nom*">
                         </div>
                         <div>
@@ -233,7 +233,7 @@
                         <ul>
                             <li><a href="about.html">À propos</a></li>
                             <li><a href="contact.html">Contactez nous</a></li>
-                            <li><a href="contact#">Notre équipe</a></li>
+                            <li><a href="contact.html#">Notre équipe</a></li>
                         </ul>
                     </div>
                 </div>
